# MXMapEngine

./: README.md  build.gradle  gradle.properties  settings.gradle  todo.txt
app/: build.gradle
app/src/androidTest/java/com/mxmariner/mxmapbox/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mxmariner/mxmapengine/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mxmariner/mxmapbox/: ExampleUnitTest.kt
engine/: CMakeLists.txt  build.gradle
engine/cmake/: config.cmake  core-files.cmake  core.cmake  filesource.cmake  headerlib.cmake  icu.cmake  nunicode.cmake  sqlite.cmake
engine/src/androidTest/java/com/mxmariner/engine/: ExampleInstrumentedTest.java
engine/src/main/: AndroidManifest.xml
engine/src/main/cpp/: native-lib.cpp
engine/src/main/cpp/libs/: headerlibConfig.cmake  icuConfig.cmake  kdbushConfig.cmake  mbglConfig.cmake  nunicodeConfig.cmake  sqliteConfig.cmake
engine/src/main/cpp/libs/icu/: readme.txt  script.sh
engine/src/main/cpp/libs/icu/arm64-v8a/58.1-min-size/: mason.ini
engine/src/main/cpp/libs/icu/arm64-v8a/58.1-min-size/lib/icu/58.1/: Makefile.inc  pkgdata.inc
engine/src/main/cpp/libs/icu/arm64-v8a/58.1-min-size/lib/pkgconfig/: icu-i18n.pc  icu-uc.pc
engine/src/main/cpp/libs/icu/x86_64/58.1-min-size/lib/icu/58.1/: pkgdata.inc
engine/src/main/cpp/libs/mapbox/platform/android/: jni.cpp  native_map_view.cpp  native_map_view.hpp
engine/src/main/cpp/libs/mapbox/platform/android/geometry/: lat_lng.cpp  lat_lng.hpp  lat_lng_bounds.cpp  lat_lng_bounds.hpp  visible_region.hpp
engine/src/main/cpp/libs/mapbox/platform/android/graphics/: pointf.cpp  pointf.hpp
engine/src/main/cpp/libs/sqlite-amalgamation/: sqlite3.h
engine/src/main/cpp/mapbox/platform/android/: jni.cpp  native_map_view.cpp  native_map_view.hpp
engine/src/main/cpp/mapbox/platform/android/geometry/: lat_lng.cpp  lat_lng.hpp  lat_lng_bounds.cpp  lat_lng_bounds.hpp  visible_region.cpp
engine/src/main/java/com/mapbox/mapboxsdk/: LibraryLoader.java  Mapbox.java
engine/src/main/java/com/mapbox/mapboxsdk/geometry/: LatLng.java  LatLngBounds.java  VisibleRegion.java
engine/src/main/java/com/mapbox/mapboxsdk/http/: HTTPRequest.java  LocalRequestTask.java  OfflineInterceptor.java
engine/src/main/java/com/mapbox/mapboxsdk/maps/: AnnotationManager.java  MapFragment.java  MapGestureDetector.java  MapView.java  MapboxMap.java  MapboxMapOptions.java  NativeMapView.java  Projection.java  SupportMapFragment.java  Telemetry.java  Transform.java  UiSettings.java
engine/src/main/java/com/mapbox/mapboxsdk/maps/renderer/egl/: EGLConfigChooser.java
engine/src/main/java/com/mapbox/mapboxsdk/maps/renderer/textureview/: TextureViewRenderThread.java
engine/src/main/java/com/mapbox/mapboxsdk/net/: ConnectivityReceiver.java
engine/src/main/java/com/mapbox/mapboxsdk/offline/: OfflineManager.java
engine/src/main/java/com/mapbox/mapboxsdk/plugins/locationlayer/: CameraMode.java  CompassManager.java  LocationLayer.java  LocationLayerCamera.java  LocationLayerOptions.java  LocationLayerPlugin.java  MapboxCameraAnimatorAdapter.java  OnCameraTrackingChangedListener.java  RenderMode.java
engine/src/main/java/com/mapbox/mapboxsdk/snapshotter/: MapSnapshotter.java
engine/src/main/java/com/mapbox/mapboxsdk/storage/: FileSource.java
engine/src/main/java/com/mapbox/mapboxsdk/style/layers/: PropertyValue.java
engine/src/main/java/com/mapbox/mapboxsdk/utils/: Logger.java
engine/src/main/java/com/mxmariner/engine/: MXEngine.java
engine/src/main/java/com/willkamp/: MapboxReady.kt
engine/src/main/res-public/values/: public.xml
engine/src/main/res/layout/: mapbox_mapview_internal.xml
engine/src/main/res/values/: attrs.xml  strings.xml  styles.xml
engine/src/test/java/com/mxmariner/engine/: ExampleUnitTest.java
geojson/: build.gradle
geojson/src/main/java/com/mapbox/core/constants/: Constants.java
geojson/src/test/java/com/mapbox/core/: TestUtils.java
gestures/: build.gradle
gestures/src/androidTest/java/com/mapbox/andoid/gestures/: ExampleInstrumentedTest.java
gestures/src/main/java/com/mapbox/android/gestures/: AndroidGesturesManager.java  MultiFingerGesture.java  ShoveGestureDetector.java  SidewaysShoveGestureDetector.java  StandardScaleGestureDetector.java
gestures/src/test/java/com/mapbox/android/gestures/: PointersManagementTest.java  RotateGestureDetectorTest.java  ShoveGestureDetectorTest.java  SidewaysShoveGestureDetectorTest.java  StandardGestureDetectorTest.java  StandardScaleGestureDetectorTest.java
gradle/: maven-publish-android.gradle
gradle/wrapper/: gradle-wrapper.properties
